--- a/config.yml
+++ b/config.yml
@@ -5,6 +5,9 @@ websocket_uri:
 zeromq_uri:
     - "127.0.0.1"
     - 7894
-logger_path:
-    "/tmp/recodex-monitor.log"
+logger:
+    file: "/var/log/recodex/monitor.log"
+    level: "debug"  # level of logging - one of "debug", "info", "warning", "error", "critical"
+    max-size: 1048576  # 1 MB; max size of file before log rotation
+    rotations: 3  # number of rotations kept
 ...
