--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
+sudo: required
 dist: trusty
 language: python
 python:
     - "3.4"
 
 install:
-    - pip install --user -r requirements.txt
+    - sudo pip install -r requirements.txt
 
 script:
     - python monitor/tests
