--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
-sudo: required
 dist: trusty
 language: python
 python:
     - "3.4"
 
 install:
-    - sudo pip install -r requirements.txt
+    - pip install --upgrade pip
+    - pip install -r requirements.txt
 
 script:
-    - python monitor/tests
+    - python monitor/test
 
