Migrating to new .toml config.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,7 @@ zmq
 
 # WebSockets
 websockets
-asyncio
 
-# Argument and configuration parsing
-pyyaml
-argparse
+# Configuration parsing
+PyYAML
 
