--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 ]
 dependencies = [
     "pyzmq",
-    "websockets",
+    "websockets==12.0",
     "PyYAML",
 ]
 requires-python = ">=3.9"
